syntax = "proto3";

package book_store.user_service;

option go_package = "github.com/Surya-7890/book_store/proto/gen";

message UserLoginRequest {}
message UserLoginResponse {}
message UserSignupRequest {}
message UserSignupResponse {}

message GetUserRequest {}
message GetUserResponse {}
message UpdateUserRequest {}
message UpdateUserResponse {}
message DeleteUserRequest {}
message DeleteUserResponse {}